{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "9f6654c7-442c-4396-aa43-339c1534419b",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "c4355610-8c3f-438b-9c9b-8bacce82381d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Tarot",
                    "type": "Button",
                    "id": "f61f64ed-8b82-439a-ad8d-4cfca8016c2c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "4aa6840a-36fe-4283-bb5e-682c270f694e",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "4558b5ee-9a64-4e03-a432-6e523e060531",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Value",
                    "id": "753e11eb-3200-4c3e-8097-555a4af84631",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "8ae24b88-40c7-40cd-8581-bd705269973e",
                    "path": "<Gamepad>/leftStick",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "48990dc7-b19e-4a0b-a1cd-5a545f164f97",
                    "path": "<Touchscreen>/touch1/tap",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9645d318-df12-4b5a-935e-0a1f88a134ee",
                    "path": "<Touchscreen>/touch7/radius/x",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}